SSDM-55: changed .isBlank to trim().isEmpty() to simplify future jdk8 builds